feat: adding api gateway and eureka server with load balancing

--- a/game-library-microservice/src/main/resources/application.properties
+++ b/game-library-microservice/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=game-library-microservice
+spring.application.name=library-microservice
 
 server.port=8081
+
+## EUREKA CLIENT
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
