--- a/rating-microservice/src/main/resources/application.properties
+++ b/rating-microservice/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=rating-microservice
 
 server.port=8083
 
+## EUREKA CLIENT
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5434/ms_rating
